# rst.git.proto

./: .project  .pydevproject  CMakeLists.txt  README.md  RSTConfig.cmake.in  TODO  qiproject.xml
cpack/: CPackDebianConfig.cmake
cpp/: CMakeLists.txt  RSTBuildTreeSettings.cmake.in  RSTConfig.cmake.in  RSTConfigVersion.cmake.in  rst.pc.in  rstdeprecated.pc.in  rstsandbox.pc.in
cpp/deprecated/: CMakeLists.txt
cpp/rosetta/: api.h
cpp/sandbox/: CMakeLists.txt  RSTSandboxConfig.cmake.in  rstsandbox.pc.in
cpp/stable/: CMakeLists.txt  RSTConfig.cmake.in  rst.pc.in
cpp/stable/rst/: RSTVersion.cpp.in  RSTVersion.h.in
cpp/test/illegal-component/: CMakeLists.txt
cpp/test/sandbox-both/: CMakeLists.txt  tester.cpp
cpp/test/stable-only-working/: CMakeLists.txt  tester.cpp
cpp/test/stable-wrong-sandbox-usage/: CMakeLists.txt  tester.cpp
java/: CMakeLists.txt  MANIFEST.MF.in  build.xml.in  pom-deprecated.xml.in  pom-sandbox.xml.in  pom-stable.xml.in  pom.xml.in
matlab/: CMakeLists.txt
project/: build_vs.bat  build_vs9.bat  codeCheck.py
proto/: CMakeLists.txt
proto/cca/rci/: Forces.proto  Interaction.proto  JointAngles.proto  JointTorques.proto  Torques.proto
proto/deprecated/rst/deprecated/: DoNotUseMe.proto  __package.proto
proto/generic/: MethodCall.proto  Value.proto
proto/rst/: BoundingBox.proto  CalibrationMatrices.proto  CameraMatrix3x4.proto  FaceDetectionMessage.proto  Gaussian1D.proto  ITDMessage.proto  ImageMessage.proto  JointData.proto  JointPositionData.proto  MixtureOfGaussian1D.proto  Point2DFloat.proto  Point2DInt.proto  Point3DFloat.proto  Point3DInt.proto  PointCloud3DFloat.proto  PointPair.proto  PoseMessage.proto  ProprioceptionData.proto  SoundMessage.proto  ViconData.proto
proto/rst/communitationpatterns/: TaskState.proto
proto/rst/dynamics/: Forces.proto  Torques.proto  Wrench.proto
proto/rst/geometry/: Pose.proto  Translation.proto
proto/rst/kinematics/: JointAngles.proto
proto/running/example/: Image.proto
proto/sandbox/rst/: InstantaneousPhase.proto  ViconData.proto
proto/sandbox/rst/amarsi/: AdaptiveComponentStatus.proto
proto/sandbox/rst/audition/: SoundEvent.proto
proto/sandbox/rst/automation/: CoordinationState.proto  DialogPrompt.proto  DownDevice.proto  FeedScrew.proto  ModuleState.proto  PLCAnswer.proto  PLCCommand.proto  PLCScript.proto  Position.proto  RpcReturnValue.proto  Screw.proto  Stamping.proto  StopperState.proto  UIFeedback.proto  UR5Move.proto
proto/sandbox/rst/calendar/: Attendee.proto  CalendarComponents.proto  DateTime.proto  Entry.proto  Event.proto  Observance.proto  Organizer.proto  Recurrence.proto  RecurrenceId.proto  RecurrenceRule.proto  Relationship.proto  RequestStatus.proto  TimeZone.proto  Todo.proto
proto/sandbox/rst/cbse/: ComponentInfo.proto  ComponentState.proto  InputPort.proto  OutputPort.proto  Tick.proto  __package.proto
proto/sandbox/rst/claas/: ClaasCan_CombineHarvester.proto  FrontAttachmentCan_CombineHarvester.proto  IbeoScala_1403.proto  J1939Can_CombineHarvester.proto  LASE_2000D_226.proto  LeuzODS9ODS96B.proto  PepperlFuchsOMD8000.proto  SickLdMRS400102.proto  SickLdMRS4002.proto  SteeringCan.proto  ism.proto  sensorGrid.proto
proto/sandbox/rst/classification/: ClassificationResult.proto  ClassificationResults.proto
proto/sandbox/rst/communicationpatterns/: TaskState.proto
proto/sandbox/rst/communitationpatterns/: TaskState.proto
proto/sandbox/rst/configuration/: Configuration.proto  Name.proto  Option.proto  Schema.proto  SchemaItem.proto  Value.proto  __package.proto
proto/sandbox/rst/devices/: __package.proto
proto/sandbox/rst/dynamics/: JointVelocities.proto  Pressure.proto
proto/sandbox/rst/euroc/: ColoredPoseSet.proto  PickAndPlaceAction.proto
proto/sandbox/rst/generic/: Dictionary.proto  KeyValuePair.proto  ListFloat.proto  MethodCall.proto  Value.proto
proto/sandbox/rst/geometry/: AxisAlignedBoundingBox3DFloat.proto  BoundingBox3DFloat.proto  Cylinder3DFloat.proto  DoubleMatrix.proto  FieldOfView.proto  Length.proto  PointCloudSet3DFloat.proto  PointPair.proto  Pose.proto  PoseEuler.proto  PoseMessage.proto  Rotation.proto  Shape3DFloat.proto  Translation.proto  TriangleMesh3DFloat.proto  TriangleMesh3DFloatSet.proto
proto/sandbox/rst/graph/: Edge.proto  EdgeListGraph.proto  Node.proto
proto/sandbox/rst/hri/: Body.proto  GroupHypothesis.proto  PersonHypotheses.proto  PersonHypothesis.proto
proto/sandbox/rst/imageprocessing/: CalibrationMatrices.proto
proto/sandbox/rst/kinematics/: AngularAccelerations.proto  JointPositionData.proto  JointPositionState.proto  JointState.proto  JointVelocities.proto  LinearAccelerations.proto  Posture3DFloat.proto  ProprioceptionState.proto  SpatialAccelerations.proto
proto/sandbox/rst/logging/: Context.proto  Level.proto  Message.proto
proto/sandbox/rst/math/: VectorDouble.proto  __package.proto
proto/sandbox/rst/monitoring/: ProcessAnomaly.proto  ProcessCues.proto
proto/sandbox/rst/motioncontrol/: MotionStatus.proto
proto/sandbox/rst/navigation/: CommandResult.proto  CoordinateCommand.proto  ExecutionParameters.proto  LabelCommand.proto  MotionParameters.proto  OccupancyGrid2DInt.proto  Path.proto  PlatformCapabilities.proto  __package.proto
proto/sandbox/rst/robot/: RobotCollision.proto  RobotState.proto
proto/sandbox/rst/scene/: SceneObject.proto  SceneObjectQuery.proto
proto/sandbox/rst/script/: Flexicode.proto
proto/sandbox/rst/signalprocessing/: InstantaneousPhase.proto  __package.proto
proto/sandbox/rst/statemachine/: StateChange.proto
proto/sandbox/rst/text/: FileLocation.proto  FileSection.proto  TextLocation.proto  TextSection.proto  __package.proto
proto/sandbox/rst/timing/: Duration.proto  (+5 more)
python/: CMakeLists.txt  CreatePythonPackages.cmake.in  init-hack-deprecated.py  init-hack-sandbox.py  init-hack.py  rst.pth.in  setup-deprecated.py.in  setup-sandbox.py.in  setup-stable.py.in  setup.py.in
rsb/xml/: XOPData.proto
rst/: ImageMessage.proto  SoundMessage.proto  ViconData.proto  XOPData.proto
running/example/: Image.proto
schema/: CMakeLists.txt
(+154 files in other folders)
